<resources>
    <string name="app_name">Blood Point</string>
    <string name="title_activity_login">Sign in</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="achiev">Achievements</string>
    <string name="gender">Gender:</string>
    <string name="name">Name:</string>
    <string name="blood_group">Blood Group:</string>
    <string name="contact_no">Contact No:</string>
    <string name="address">Address:</string>
    <string name="division">Division:</string>
    <string name="mark_this_to_be_a_donor">Mark this to be a donor</string>


    <!-- Strings related to login -->
    <string name="signup">Register</string>
    <string name="prompt_email">Email</string>
    <string name="register">Create an account</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="reset">Reset</string>
    <string name="displayName">Full Name</string>
    <string name="mobile">Mobile no.</string>
    <string name="userAddress">Address</string>
    <string name="nearH">Find Nearest Hospitals</string>
    <string name="fndBlood">Find Blood Donor</string>
    <string name="lgout">Log Out</string>
    <string name="devinfo">About Us</string>
    <string name="bloodinfo">Donor Eligibility</string>


    <string-array name="division_list">
        <item>University of Medicine and Pharmacy at Ho Chi Minh</item>
        <item>Pham Ngoc Thach University</item>
        <item>115 Hospital</item>
        <item>Binh Dan Hospital</item>
        <item>Trung Vuong Hospital</item>
        <item>175 Hospital</item>
    </string-array>

    <array name="gender">
        <item>Male</item>
        <item>Female</item>
    </array>

    <array name="chart_spinner">
        <item>This month</item>
        <item>This year</item>
        <item>4 years</item>
    </array>

    <array name="Blood_Group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </array>

    <string name="eligibility_">Who Should Donate Blood?</string>
    <string name="female_">If you are female, you must:\n\u2022 Be healthy and feeling well\n\u2022 Be within 18–60 years old\n\u2022 Weigh at least 42kg</string>
    <string name="male_">If you are male, you must:\n\u2022 Be healthy and feeling well\n\u2022 Be within 18–60 years old\n\u2022 Weigh at least 45kg</string>
    <string name="info_">Giving blood saves lives.</string>
    <string name="aboutus">This is a blood donation app.</string>
    <string name="user_list">User List</string>
    <string name="statUser">User Chart</string>
    <string name="chart_blood">Blood Chart</string>
    <string name="view_post">View Post</string>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="blood_transfusion">Blood Compatibility</string>


</resources>
