<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/InfoDonor"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/user_list" />
        <item
            android:id="@+id/StatUser"
            android:icon="@drawable/ic_baseline_show_chart_24"
            android:title="@string/statUser" />
        <item
            android:id="@+id/BloodStat"
            android:icon="@drawable/ic_baseline_pie_chart_24"
            android:title="@string/chart_blood" />
        <item
            android:id="@+id/Post"
            android:icon="@drawable/ic_baseline_amp_stories_24"
            android:title="@string/view_post" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/lgout" />
    </group>

</menu>
