<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/primary"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/blood_info_appbar"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/border"
            android:backgroundTint="@color/primary_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Why Should You Donate Blood?"
            android:textColor="@color/primaryText"
            android:textSize="20dp"
            android:padding="8dp"
            android:layout_margin="8dp"/>
        <TextView
            android:gravity="start"
            android:layout_gravity="center"
            android:background="@drawable/border"
            android:layout_width="wrap_content"
            android:textColor="@color/primaryText"
            android:layout_height="wrap_content"
            android:text="@string/info_"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:layout_margin="8dp"/>

        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:backgroundTint="@color/primary_dark"
            android:background="@drawable/border"
            android:layout_width="match_parent"
            android:textColor="@color/primaryText"
            android:layout_height="wrap_content"
            android:text="@string/eligibility_"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_margin="8dp"/>

        <TextView
            android:background="@drawable/border"
            android:gravity="start"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/primaryText"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_margin="8dp"/>

        <TextView
            android:background="@drawable/border"
            android:gravity="start"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/primaryText"
            android:layout_height="wrap_content"
            android:text="@string/female_"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"/>

        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:backgroundTint="@color/primary_dark"
            android:background="@drawable/border"
            android:layout_width="match_parent"
            android:textColor="@color/primaryText"
            android:layout_height="wrap_content"
            android:text="@string/blood_transfusion"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_margin="8dp"/>


        <pl.droidsonroids.gif.GifImageView
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/blood_type"/>
    </LinearLayout>

</ScrollView>